src/objects/Partner_Product_Junction__c.object
<CustomObject>
    <description>Relates a product to a partner, allow the product to be enabled for specific partners.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Can&apos;t be a master/detail fro some reason:
https://success.salesforce.com/answers?id=906300000004AH9AAM</description>
        <label>Enabled Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Partner Product Junctions</relationshipLabel>
        <relationshipName>Partner_Product_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Partner Product Junctions</relationshipLabel>
        <relationshipName>Partner_Product_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Partner Product Junction</label>
    <nameField>
        <displayFormat>PPJ-{0000}</displayFormat>
        <label>Partner Product Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Product Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>